[package]
authors = [
  "Elias Kartashov <elias@lowenware.com>",
  "Barugon <barugon@dungeonbox.net>",
]
description = "File dialog window for egui"
edition = "2021"
keywords = ["file-dialog", "file-picker"]
license = "MIT"
name = "egui_file"
repository = "https://github.com/Barugon/egui_file"
version = "0.6.0"

[dependencies]
fst = { version = "0.4.7", path = "../fst" }
glidesort = "0.1.2"
memchr = "2.5.0"
parking_lot = "0.12.1"

[dependencies.egui]
version = "0.20"
