[package]
authors = [
  "Elias Kartashov <elias@lowenware.com>",
  "Barugon <barugon@dungeonbox.net>",
]
description = "File dialog window for egui"
edition = "2021"
keywords = ["file-dialog", "file-picker"]
license = "MIT"
name = "egui_file"
repository = "https://github.com/Barugon/egui_file"
version = "0.6.0"

[dependencies]
cfg-if = "1.0.0"
fst = { git = "https://github.com/StratusFearMe21/fst.git" }
memchr = "2.5.0"
parking_lot = "0.12.1"

[dependencies.egui]
version = "0.21"
